crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_Concrete_default_wit…_(30284a6490652e58).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - Concrete default with constraints
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, TypeVar
 2 | 
 3 | # error: [invalid-type-variable-default] "Default type `bytes` is not one of the constrained types"
 4 | T = TypeVar("T", int, str, default=bytes)
 5 | 
 6 | S = TypeVar("S", int, str, default=int)
 7 | 
 8 | # A subtype is not sufficient; the default must be exactly one of the constraints.
 9 | # error: [invalid-type-variable-default] "Default type `bool` is not one of the constrained types"
10 | U = TypeVar("U", int, str, default=bool)
11 | 
12 | # `Any` is always allowed as a default, even for constrained TypeVars.
13 | V = TypeVar("V", int, str, default=Any)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `bytes` is not one of the constrained types
 --> src/mdtest_snippet.py:4:36
  |
3 | # error: [invalid-type-variable-default] "Default type `bytes` is not one of the constrained types"
4 | T = TypeVar("T", int, str, default=bytes)
  |                                    ^^^^^
5 |
6 | S = TypeVar("S", int, str, default=int)
  |
info: rule `invalid-type-variable-default` is enabled by default

```

```
error[invalid-type-variable-default]: Default type `bool` is not one of the constrained types
  --> src/mdtest_snippet.py:10:36
   |
 8 | # A subtype is not sufficient; the default must be exactly one of the constraints.
 9 | # error: [invalid-type-variable-default] "Default type `bool` is not one of the constrained types"
10 | U = TypeVar("U", int, str, default=bool)
   |                                    ^^^^
11 |
12 | # `Any` is always allowed as a default, even for constrained TypeVars.
   |
info: rule `invalid-type-variable-default` is enabled by default

```
